v2.13.0/_sources/plugins/clients_info_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.clients_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.clients_info module -- Information module for Clients
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.13.0).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.clients_info_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.clients_info`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 1.0.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Clients.
- Get Clients by id.
- Retrieves specific client information matching the MAC address. For detailed.
- Retrieves the list of clients, while also offering basic filtering and sorting.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.clients_info_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.2.3.0.0
- python \>= 3.12






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-attribute"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-attribute:

      .. rst-class:: ansible-option-title

      **attribute**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-attribute" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Attribute query parameter. List of attributes related to resource that can be requested to only be part of the response along with the required attributes. Refer to ClientAttribute schema for list of attributes supported Examples \`attribute=band\` (single attribute requested) \`attribute=band&attribute=ssid&attribute=overallScore\` (multiple attribute requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-band"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-band:

      .. rst-class:: ansible-option-title

      **band**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-band" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Band query parameter. WiFi frequency band that client or Access Point operates. Band value is represented in Giga Hertz - GHz Examples \`band=5GHZ\` (single band requested) \`band=2.4GHZ&band=6GHZ\` (multiple band requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_debug"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-catalystcenter_debug:
      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **catalystcenter_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_debug`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_host"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-catalystcenter_host:
      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **catalystcenter_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_host`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_password"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-catalystcenter_password:
      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **catalystcenter_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_password`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-catalystcenter_api_port:
      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-catalystcenter_port:
      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **catalystcenter_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_port, catalystcenter_api_port`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-catalystcenter_username:
      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-dnac_username:
      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-user:

      .. rst-class:: ansible-option-title

      **catalystcenter_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_username, user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_verify"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-catalystcenter_verify:
      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **catalystcenter_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_verify`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_version"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-catalystcenter_version:
      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **catalystcenter_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_version`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1.6.0"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-connectedNetworkDeviceName"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-connectednetworkdevicename:

      .. rst-class:: ansible-option-title

      **connectedNetworkDeviceName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-connectedNetworkDeviceName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      ConnectedNetworkDeviceName query parameter. Name of the neighbor network device that client is connected to. This field supports wildcard (\`\*\`) character-based search. If the value contains the (\`\*\`) character, please use the /query API for regex search. Ex \`\*ap-25\*\` or \`ap-25\*\` or \`\*ap-25\` Examples \`connectedNetworkDeviceName=ap-25\` (single connectedNetworkDeviceName requested) \`connectedNetworkDeviceName=ap-25&ap-34\` (multiple connectedNetworkDeviceName requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-endTime"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-endtime:

      .. rst-class:: ansible-option-title

      **endTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-endTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      EndTime query parameter. End time to which API queries the data set related to the resource. It must be specified in UNIX epochtime in milliseconds. Value is inclusive.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-headers"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-headers:

      .. rst-class:: ansible-option-title

      **headers**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Additional headers.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Id path parameter. Id is the client mac address. It can be specified is any notational conventions 01 23 45 67 89 AB or 01-23-45-67-89-AB or 0123.4567.89AB and is case insensitive.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ipv4Address"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-ipv4address:

      .. rst-class:: ansible-option-title

      **ipv4Address**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ipv4Address" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Ipv4Address query parameter. IPv4 Address of the network entity either network device or client This field supports wildcard (\`\*\`) character-based search. Ex \`\*1.1\*\` or \`1.1\*\` or \`\*1.1\` Examples \`ipv4Address=1.1.1.1\` (single ipv4Address requested) \`ipv4Address=1.1.1.1&ipv4Address=2.2.2.2\` (multiple ipv4Address requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ipv6Address"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-ipv6address:

      .. rst-class:: ansible-option-title

      **ipv6Address**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ipv6Address" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Ipv6Address query parameter. IPv6 Address of the network entity either network device or client This field supports wildcard (\`\*\`) character-based search. Ex \`\*2001 db8\*\` or \`2001 db8\*\` or \`\*2001 db8\` Examples \`ipv6Address=2001 db8 0 0 0 0 2 1\` (single ipv6Address requested) \`ipv6Address=2001 db8 0 0 0 0 2 1&ipv6Address=2001 db8 85a3 8d3 1319 8a2e 370 7348\` (multiple ipv6Address requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-limit"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-limit:

      .. rst-class:: ansible-option-title

      **limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Limit query parameter. Maximum number of records to return.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-macAddress"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-macaddress:

      .. rst-class:: ansible-option-title

      **macAddress**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-macAddress" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      MacAddress query parameter. The macAddress of the network device or client This field supports wildcard (\`\*\`) character-based search. Ex \`\*AB AB AB\*\` or \`AB AB AB\*\` or \`\*AB AB AB\` Examples \`macAddress=AB AB AB CD CD CD\` (single macAddress requested) \`macAddress=AB AB AB CD CD DC&macAddress=AB AB AB CD CD FE\` (multiple macAddress requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-offset"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-offset:

      .. rst-class:: ansible-option-title

      **offset**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-offset" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Offset query parameter. Specifies the starting point within all records returned by the API. It's one based offset. The starting value is 1.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-order"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-order:

      .. rst-class:: ansible-option-title

      **order**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-order" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Order query parameter. The sort order of the field ascending or descending.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-osType"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-ostype:

      .. rst-class:: ansible-option-title

      **osType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-osType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      OsType query parameter. Client device operating system type. This field supports wildcard (\`\*\`) character-based search. If the value contains the (\`\*\`) character, please use the /query API for regex search. Ex \`\*iOS\*\` or \`iOS\*\` or \`\*iOS\` Examples \`osType=iOS\` (single osType requested) \`osType=iOS&osType=Android\` (multiple osType requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-osVersion"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-osversion:

      .. rst-class:: ansible-option-title

      **osVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-osVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      OsVersion query parameter. Client device operating system version This field supports wildcard (\`\*\`) character-based search. If the value contains the (\`\*\`) character, please use the /query API for regex search. Ex \`\*14.3\*\` or \`14.3\*\` or \`\*14.3\` Examples \`osVersion=14.3\` (single osVersion requested) \`osVersion=14.3&osVersion=10.1\` (multiple osVersion requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-siteHierarchy"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-sitehierarchy:

      .. rst-class:: ansible-option-title

      **siteHierarchy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-siteHierarchy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SiteHierarchy query parameter. The full hierarchical breakdown of the site tree starting from Global site name and ending with the specific site name. The Root site is named "Global" (Ex. "Global/AreaName/BuildingName/FloorName") This field supports wildcard (\`\*\`) character-based search. If the value contains the (\`\*\`) character, please use the /query API for regex search. Ex \`\*BuildingName\*\` or \`BuildingName\*\` or \`\*BuildingName\` Examples \`siteHierarchy=Global/AreaName/BuildingName/FloorName\` (single siteHierarchy requested) \`siteHierarchy=Global/AreaName/BuildingName1/FloorName1&siteHierarchy=G lobal/AreaName/BuildingName1/FloorName2\` (multiple siteHierarchy requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-siteHierarchyId"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-sitehierarchyid:

      .. rst-class:: ansible-option-title

      **siteHierarchyId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-siteHierarchyId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SiteHierarchyId query parameter. The full hierarchy breakdown of the site tree in id form starting from Global site UUID and ending with the specific site UUID. (Ex. "globalUuid/areaUuid/buildingUuid/floorUuid") This field supports wildcard (\`\*\`) character-based search. Ex \`\*buildingUuid\*\` or \`buildingUuid\*\` or \`\*buildingUuid\` Examples \`siteHierarchyId=globalUuid/areaUuid/buildingUuid/floorUuid\` (single siteHierarchyId requested) \`siteHie rarchyId=globalUuid/areaUuid/buildingUuid1/floorUuid1&siteHierarchyId=globalUuid/areaUuid/buildingUuid1/ floorUuid2\` (multiple siteHierarchyId requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-siteId"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-siteid:

      .. rst-class:: ansible-option-title

      **siteId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-siteId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SiteId query parameter. The site UUID without the top level hierarchy. (Ex."floorUuid") Examples \`siteId=floorUuid\` (single siteId requested) \`siteId=floorUuid1&siteId=floorUuid2\` (multiple siteId requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortBy"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-sortby:

      .. rst-class:: ansible-option-title

      **sortBy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortBy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SortBy query parameter. A field within the response to sort by.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ssid"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-ssid:

      .. rst-class:: ansible-option-title

      **ssid**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ssid" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Ssid query parameter. SSID is the name of wireless network to which client connects to. It is also referred to as WLAN ID - Wireless Local Area Network Identifier. This field supports wildcard (\`\*\`) character-based search. If the value contains the (\`\*\`) character, please use the /query API for regex search. Ex \`\*Alpha\*\` or \`Alpha\*\` or \`\*Alpha\` Examples \`ssid=Alpha\` (single ssid requested) \`ssid=Alpha&ssid=Guest\` (multiple ssid requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-startTime"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-starttime:

      .. rst-class:: ansible-option-title

      **startTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-startTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      StartTime query parameter. Start time from which API queries the data set related to the resource. It must be specified in UNIX epochtime in milliseconds. Value is inclusive. If \`startTime\` is not provided, API will default to current time.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-type"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-type:

      .. rst-class:: ansible-option-title

      **type**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-type" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Type query parameter. The client device type whether client is connected to network through Wired or Wireless medium.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-view"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-view:

      .. rst-class:: ansible-option-title

      **view**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-view" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      View query parameter. Client related Views Refer to ClientView schema for list of views supported Examples \`view=Wireless\` (single view requested) \`view=WirelessHealth&view=WirelessTraffic\` (multiple view requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-wlcName"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__parameter-wlcname:

      .. rst-class:: ansible-option-title

      **wlcName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-wlcName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      WlcName query parameter. Wireless Controller name that reports the wireless client. This field supports wildcard (\`\*\`) character-based search. If the value contains the (\`\*\`) character, please use the /query API for regex search. Ex \`\*wlc-25\*\` or \`wlc-25\*\` or \`\*wlc-25\` Examples \`wlcName=wlc-25\` (single wlcName requested) \`wlcName=wlc-25&wlc-34\` (multiple wlcName requested).
          


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are clients.Clients.retrieves\_specific\_client\_information\_matching\_the\_macaddress, clients.Clients.retrieves\_the\_list\_of\_clients\_while\_also\_offering\_basic\_filtering\_and\_sorting\_capabilities,
   - Paths used are get /dna/data/api/v1/clients, get /dna/data/api/v1/clients/{id},
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK
   - Requires Python \>= 3.10, matching the controller Python versions supported by the collection's minimum ansible-core version (see the collection README for the current ansible-core / Python compatibility range)

.. Seealso

See Also
--------

.. seealso::

   `Cisco Catalyst Center documentation for Clients RetrievesSpecificClientInformationMatchingTheMACAddress <https://developer.cisco.com/docs/dna-center/#!retrieves-specific-client-information-matching-the-mac-address>`_
       Complete reference of the RetrievesSpecificClientInformationMatchingTheMACAddress API.
   `Cisco Catalyst Center documentation for Clients RetrievesTheListOfClients_WhileAlsoOfferingBasicFilteringAndSortingCapabilities <https://developer.cisco.com/docs/dna-center/#!retrieves-the-list-of-clients-while-also-offering-basic-filtering-and-sorting-capabilities>`_
       Complete reference of the RetrievesTheListOfClients\_WhileAlsoOfferingBasicFilteringAndSortingCapabilities API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Get all Clients
      cisco.catalystcenter.clients_info:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        headers: "{{my_headers | from_json}}"
        startTime: 0
        endTime: 0
        limit: 0
        offset: 0
        sortBy: string
        order: string
        type: string
        osType: string
        osVersion: string
        siteHierarchy: string
        siteHierarchyId: string
        siteId: string
        ipv4Address: string
        ipv6Address: string
        macAddress: string
        wlcName: string
        connectedNetworkDeviceName: string
        ssid: string
        band: string
        view: string
        attribute: string
      register: result
    - name: Get Clients by id
      cisco.catalystcenter.clients_info:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        headers: "{{my_headers | from_json}}"
        startTime: 0
        endTime: 0
        view: string
        attribute: string
        id: string
      register: result




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-catalystcenter_response"></div>

      .. _ansible_collections.cisco.catalystcenter.clients_info_module__return-catalystcenter_response:

      .. rst-class:: ansible-option-title

      **catalystcenter_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-catalystcenter_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"connectedNetworkDevice": {"connectedNetworkDeviceId": "string", "connectedNetworkDeviceMac": "string", "connectedNetworkDeviceManagementIp": "string", "connectedNetworkDeviceName": "string", "connectedNetworkDeviceType": "string", "duplexMode": "string", "interfaceName": "string", "interfaceSpeed": 0}, "connection": {"apEthernetMac": "string", "apMac": "string", "apMode": "string", "authType": "string", "band": "string", "bridgeVMMode": "string", "channel": "string", "channelWidth": "string", "dataRate": 0, "isIosAnalyticsCapable": true, "l2Vn": "string", "l3Vn": "string", "linkSpeed": 0, "protocol": "string", "protocolCapability": "string", "radioId": 0, "rssi": 0, "securityGroupTag": "string", "sessionDuration": 0, "snr": 0, "ssid": "string", "upnDuid": "string", "upnId": "string", "upnName": "string", "upnOwner": "string", "vlanId": "string", "vnId": "string", "wlcId": "string", "wlcName": "string"}, "connectionStatus": "string", "formFactor": "string", "health": {"connectedScore": 0, "isLinkErrorIncluded": true, "isRssiIncluded": true, "isSnrIncluded": true, "linkErrorPercentageThreshold": 0, "onboardingScore": 0, "overallScore": 0, "rssiThreshold": 0, "snrThreshold": 0}, "id": "string", "ipv4Address": "string", "ipv6Addresses": ["string"], "isPrivateMacAddress": true, "lastUpdatedTime": 0, "latency": {"background": 0, "bestEffort": 0, "video": 0, "voice": 0}, "macAddress": "string", "name": "string", "onboarding": {"aaaFailureReason": "string", "aaaServerIp": "string", "assocDoneTime": 0, "assocFailureReason": "string", "authDoneTime": 0, "avgAssocDuration": 0, "avgAuthDuration": 0, "avgDhcpDuration": 0, "avgRunDuration": 0, "dhcpDoneTime": 0, "dhcpFailureReason": "string", "dhcpServerIp": "string", "failedRoamingCount": 0, "latestFailureReason": "string", "maxAssocDuration": 0, "maxAuthDuration": 0, "maxDhcpDuration": 0, "maxRoamingDuration": 0, "maxRunDuration": 0, "onboardingTime": 0, "otherFailureReason": "string", "roamingTime": 0, "successfulRoamingCount": 0, "totalRoamingAttempts": 0}, "osType": "string", "osVersion": "string", "siteHierarchy": "string", "siteHierarchyId": "string", "siteId": "string", "tracked": "string", "traffic": {"dnsRequestCount": 0, "dnsResponseCount": 0, "rxBytes": 0, "rxLinkErrorPercentage": 0, "rxPackets": 0, "rxRate": 0, "rxRetries": 0, "rxRetryPercentage": 0, "txBytes": 0, "txDropPercentage": 0, "txDrops": 0, "txLinkErrorPercentage": 0, "txPackets": 0, "txRate": 0, "usage": 0}, "type": "string", "userId": "string", "username": "string", "vendor": "string"}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Bryan Vargas (@bvargasre)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

